--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/cors": "^2.8.14",
     "@types/mysql": "^2.15.22",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-route-grouping": "^1.1.1",
