fix create new user

--- a/.env
+++ b/.env
@@ -5,5 +5,7 @@ DB_USER=root
 DB_PASSWORD=ducphap0112
 DB_DATABASE=notebooks
 
-ACCESS_TOKEN_SECRET=gfdgfdxvsfshfdgdfgfdgf
-ACCESS_TOKEN_LIFE=36500d
+ACCESS_TOKEN_SECRET=access-token-secret-example-typescript-notebook-app
+ACCESS_TOKEN_LIFE=5m
+
+SESSION_SECRET=session-secret-typescript-notebook-app
