--- a/package.json
+++ b/package.json
@@ -34,12 +34,16 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.14",
+    "@types/express-session": "^1.17.8",
     "@types/mysql": "^2.15.22",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-route-grouping": "^1.1.1",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1"
   }
