--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.14",
     "@types/express-session": "^1.17.8",
+    "@types/express-validator": "^3.0.0",
     "@types/mysql": "^2.15.22",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -44,6 +45,7 @@
     "express": "^4.18.2",
     "express-route-grouping": "^1.1.1",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1"
   }
