--- a/.env
+++ b/.env
@@ -3,9 +3,13 @@ PORT=5000
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=ducphap0112
-DB_DATABASE=notebooks
+DB_NAME=notebooks
+DB_DRIVER=mysql
+DB_PORT=3306
 
 ACCESS_TOKEN_SECRET=access-token-secret-example-typescript-notebook-app
-ACCESS_TOKEN_LIFE=5m
+ACCESS_TOKEN_LIFE=1d
 
 SESSION_SECRET=session-secret-typescript-notebook-app
+
+NODE_ENV=development
