--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
+    "sequelize-cli": "^6.3.0",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.8",
     "tsconfig-paths": "^4.2.0",
@@ -39,6 +40,7 @@
     "@types/express-session": "^1.17.8",
     "@types/express-validator": "^3.0.0",
     "@types/mysql": "^2.15.22",
+    "@types/sequelize": "^4.28.16",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -47,6 +49,8 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.1",
+    "sequelize": "^6.33.0"
   }
 }
