--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express-session": "^1.17.8",
     "@types/express-validator": "^3.0.0",
     "@types/mysql": "^2.15.22",
     "@types/sequelize": "^4.28.16",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
